force-app/main/default/objects/Enrollment_Exception_Logs__c/Enrollment_Exception_Logs__c.object-meta.xml
<CustomObject>
    <label>Enrollment Exception Logs</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Enrollment Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>