force-app/main/default/objects/Enrollment_Exception_Logs__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Exception Logs</relationshipLabel>
    <relationshipName>Enrollment_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>