force-app/main/default/objects/Enrollment_Exception_Logs__c/fields/Stripe_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_Amount__c</fullName>
    <label>Stripe Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>