force-app/main/default/objects/Enrollment_Exception_Logs__c/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>